list todos for the parser

--- a/haolong/mcqa_parser.ipynb
+++ b/haolong/mcqa_parser.ipynb
@@ -225,8 +225,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO:\n",
+    "\n",
+    "考虑如下情况：\n",
+    "\n",
+    "model的output是 \n",
+    "(a)，或者直接返回了content而不是label（ABCD..）\n",
+    "Option: A\n",
+    "The chosen option is:\n",
+    "     (a) True\n",
+    "     (b) False\n",
+    "没有回复\n",
+    "\n",
+    "\n",
+    "在原来的算法里，不会捕捉到A。\n",
+    "\n",
+    "考虑：parse这样的情形；ask again；match content；从option中获取option的数量"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -235,13 +257,11 @@
      "text": [
       "\n",
       "Answer the following question:\n",
-      "Question: Categorical Cross-Entropy loss:?\n",
+      "Question: In JOS, after finishing the execution of a user-level page fault handler, how is the program control flow transferred back to the program? (You may get insights from the code snippet of _pagefault_upcall.)?\n",
       "Choose from the following options:\n",
       "Options:\n",
-      "A. Minimizing the distance between the predicted point and the true point\n",
-      "B. Maximizing the probability of the correct class\n",
-      "C. Minimizing the score of false classes when they are close, or bigger than, the score of the true class\n",
-      "D. Maximizing the accuracy\n",
+      "A. The control flow will be transferred to kernel first, then to Env that caused the page fault.\n",
+      "B. The control flow will be transferred to Env that caused the page fault directly.\n",
       "    \n",
       "Please provide only one answer with the letter of the option.\n",
       "The chosen option is:\n",
@@ -249,43 +269,36 @@
       "===================\n",
       "\n",
       "Answer the following question:\n",
-      "Question: Categorical Cross-Entropy loss:?\n",
+      "Question: In JOS, after finishing the execution of a user-level page fault handler, how is the program control flow transferred back to the program? (You may get insights from the code snippet of _pagefault_upcall.)?\n",
       "Choose from the following options:\n",
       "Options:\n",
-      "A. Minimizing the distance between the predicted point and the true point\n",
-      "B. Maximizing the probability of the correct class\n",
-      "C. Minimizing the score of false classes when they are close, or bigger than, the score of the true class\n",
-      "D. Maximizing the accuracy\n",
+      "A. The control flow will be transferred to kernel first, then to Env that caused the page fault.\n",
+      "B. The control flow will be transferred to Env that caused the page fault directly.\n",
       "    \n",
       "Please provide only one answer with the letter of the option.\n",
       "The chosen option is:\n",
-      "     B\n",
-      "\n",
-      "Explanation:\n",
-      "1. Minim\n",
-      "MCQA ANSWER -----------------> B\n",
+      "    \n",
+      "- _pagefault_upcall: Control flow\n",
+      "MCQA ANSWER -----------------> C\n",
       "-------------------\n",
       "Answer the following question:\n",
-      "Question: Categorical Cross-Entropy loss:?\n",
+      "Question: In JOS, after finishing the execution of a user-level page fault handler, how is the program control flow transferred back to the program? (You may get insights from the code snippet of _pagefault_upcall.)?\n",
       "Choose from the following options:\n",
       "Options:\n",
-      "A. Minimizing the distance between the predicted point and the true point\n",
-      "B. Maximizing the probability of the correct class\n",
-      "C. Minimizing the score of false classes when they are close, or bigger than, the score of the true class\n",
-      "D. Maximizing the accuracy\n",
+      "A. The control flow will be transferred to kernel first, then to Env that caused the page fault.\n",
+      "B. The control flow will be transferred to Env that caused the page fault directly.\n",
       "    \n",
       "Please provide only one answer with the letter of the option.\n",
       "The chosen option is:\n",
-      "     A\n",
-      "The answer is correct.\n",
-      "The answer is\n",
-      "MCQA ANSWER -----------------> A\n"
+      "    \n",
+      "C. The control flow will be transferred to\n",
+      "MCQA ANSWER -----------------> C\n"
      ]
     }
    ],
    "source": [
-    "index = random.randint(0, len(dataset['train']))\n",
-    "instruction, question_body, options = prep_input(dataset['train'][index])\n",
+    "index = random.randint(0, len(dataset['test']))\n",
+    "instruction, question_body, options = prep_input(dataset['test'][index])\n",
     "print(instruction)\n",
     "print(\"===================\")\n",
     "\n",
@@ -300,6 +313,13 @@
     "print(output_str_original_model[len(input):])\n",
     "print(\"MCQA ANSWER ----------------->\", parse_mcqa_output(output_str_original_model, instruction))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
