clean format of promots

--- a/haolong/mcqa_parser.ipynb
+++ b/haolong/mcqa_parser.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,8 +81,7 @@
     "Options:\\n{options}\n",
     "    \n",
     "Please provide only one answer with the letter of the option.\n",
-    "The chosen option is:\n",
-    "    \"\"\"\n",
+    "The chosen option is:\"\"\"\n",
     "    return instruction, question_body, options\n",
     "\n",
     "def generate_answer(instruction, model, tokenizer, max_new_tokens=42): # 42 because it's the mean of the lengths of the option texts (see below)\n",
@@ -457,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -468,44 +467,34 @@
       "===================\n",
       "\n",
       "Answer the following question in English:\n",
-      "Question: Consider a binary classification problem with classifier $f(\\mathbf{x})$ given by $$ f(\\mathbf{x})= \\begin{cases}1, & g(\\mathbf{x}) \\geq 0 \\\\ -1, & g(\\mathbf{x})<0\\end{cases} $$ and $\\mathbf{x} \\in \\mathbb{R}^{6}$. Consider a specific pair $(\\mathbf{x}, y=1)$ and assume that $g(\\mathbf{x})=8$. In particular this means that this point is classified correctly by $f$. Assume further that we have computed the gradient of $g$ at $\\mathbf{x}$ to be $\\nabla_{\\mathbf{x}} g(\\mathbf{x})=(+1,-2,+3,-4,+5,-6)$. You are allowed to make one step in order to (hopefully) find an adversarial example. In the following four questions, assume $\\epsilon=1$. Which offset $\\delta$ with $\\|\\delta\\|_{1} \\leq 1$ yields the smallest value for $g(\\mathbf{x}+\\delta)$, assuming that $g$ is (locally) linear?\n",
+      "Question: A generator matrix $G$ of binary $(6,3)$ linear code maps the information vectors $m_1 = (1,0,1)$ and $m_2=(1,1,1)$ into the codewords $c_1 = (1,1,0,0,0,1)$ and $c_2=(1,0,0,0,1,0)$ respectively. Which of the following is true?\n",
       "Choose from the following options:\n",
       "Options:\n",
-      "A. $(0,0,0,0,0,1)$\n",
-      "B. $(+1,-1,+1,-1,+1,-1)$\n",
-      "C. $(+1,-2,+3,-4,+5,-6)$\n",
-      "D. $(+1,+1,+1,+1,+1,+1)$\n",
-      "E. $(-1,+2,-3,+4,-5,+6)$\n",
-      "F. $(0,0,0,0,0,1)$\n",
-      "G. $(-1,+1,-1,+1,-1,+1)$\n",
-      "H. $(-1,-1,-1,-1,-1,-1)$\n",
+      "A. The second row of $G$ is $(0,1,0,0,1,1)$.\n",
+      "B. $G$ is in systematic form.\n",
+      "C. $d_{\\min} = 3$.\n",
       "    \n",
       "Please provide only one answer with the letter of the option.\n",
       "The chosen option is:\n",
-      "    \n",
       "===================\n",
       "Model generation (with input)\n",
       "\n",
       "Answer the following question in English:\n",
-      "Question: Consider a binary classification problem with classifier $f(\\mathbf{x})$ given by $$ f(\\mathbf{x})= \\begin{cases}1, & g(\\mathbf{x}) \\geq 0 \\\\ -1, & g(\\mathbf{x})<0\\end{cases} $$ and $\\mathbf{x} \\in \\mathbb{R}^{6}$. Consider a specific pair $(\\mathbf{x}, y=1)$ and assume that $g(\\mathbf{x})=8$. In particular this means that this point is classified correctly by $f$. Assume further that we have computed the gradient of $g$ at $\\mathbf{x}$ to be $\\nabla_{\\mathbf{x}} g(\\mathbf{x})=(+1,-2,+3,-4,+5,-6)$. You are allowed to make one step in order to (hopefully) find an adversarial example. In the following four questions, assume $\\epsilon=1$. Which offset $\\delta$ with $\\|\\delta\\|_{1} \\leq 1$ yields the smallest value for $g(\\mathbf{x}+\\delta)$, assuming that $g$ is (locally) linear?\n",
+      "Question: A generator matrix $G$ of binary $(6,3)$ linear code maps the information vectors $m_1 = (1,0,1)$ and $m_2=(1,1,1)$ into the codewords $c_1 = (1,1,0,0,0,1)$ and $c_2=(1,0,0,0,1,0)$ respectively. Which of the following is true?\n",
       "Choose from the following options:\n",
       "Options:\n",
-      "A. $(0,0,0,0,0,1)$\n",
-      "B. $(+1,-1,+1,-1,+1,-1)$\n",
-      "C. $(+1,-2,+3,-4,+5,-6)$\n",
-      "D. $(+1,+1,+1,+1,+1,+1)$\n",
-      "E. $(-1,+2,-3,+4,-5,+6)$\n",
-      "F. $(0,0,0,0,0,1)$\n",
-      "G. $(-1,+1,-1,+1,-1,+1)$\n",
-      "H. $(-1,-1,-1,-1,-1,-1)$\n",
+      "A. The second row of $G$ is $(0,1,0,0,1,1)$.\n",
+      "B. $G$ is in systematic form.\n",
+      "C. $d_{\\min} = 3$.\n",
       "    \n",
       "Please provide only one answer with the letter of the option.\n",
       "The chosen option is:\n",
-      "     F.\n",
+      "B.\n",
       "\n",
-      "Explanation:\n",
-      "1. The gradient of $g$ at $\\mathbf{x}$ is given by $\\nabla_{\\mathbf{x}} g(\\mathbf{x})=(+1,-2,+3,-4,+5,\n",
-      "MCQA ANSWER -----------------> F\n"
+      "Let's first analyze the generator matrix $G$ of the code $(6,3)$:\n",
+      "\n",
+      "The generator matrix $G$ of the code $(6,3)$ is a 6-by-6 matrix\n",
+      "MCQA ANSWER -----------------> B\n"
      ]
     }
    ],
