clean output formats for test code

--- a/haolong/mcqa_parser.ipynb
+++ b/haolong/mcqa_parser.ipynb
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -465,48 +465,71 @@
      "text": [
       "Instruction:\n",
       "===================\n",
-      "\n",
       "Answer the following question in English:\n",
-      "Question: A generator matrix $G$ of binary $(6,3)$ linear code maps the information vectors $m_1 = (1,0,1)$ and $m_2=(1,1,1)$ into the codewords $c_1 = (1,1,0,0,0,1)$ and $c_2=(1,0,0,0,1,0)$ respectively. Which of the following is true?\n",
+      "Question: Given the distribution of positive and negative samples for attributes A1 and A2, which is the best attribute for splitting?\n",
+      "\n",
+      "|A1|P|N|\n",
+      "|---|---|---|\n",
+      "|a|7|0|\n",
+      "|b|1|4|\n",
+      "\n",
+      "|A2|P|N|\n",
+      "|--|--|--|\n",
+      "|x|5|1|\n",
+      "|y|3|3|?\n",
       "Choose from the following options:\n",
       "Options:\n",
-      "A. The second row of $G$ is $(0,1,0,0,1,1)$.\n",
-      "B. $G$ is in systematic form.\n",
-      "C. $d_{\\min} = 3$.\n",
+      "A. A1\n",
+      "B. A2\n",
+      "C. They are the same\n",
+      "D. There is not enough information to answer the question\n",
       "    \n",
       "Please provide only one answer with the letter of the option.\n",
       "The chosen option is:\n",
       "===================\n",
       "Model generation (with input)\n",
-      "\n",
       "Answer the following question in English:\n",
-      "Question: A generator matrix $G$ of binary $(6,3)$ linear code maps the information vectors $m_1 = (1,0,1)$ and $m_2=(1,1,1)$ into the codewords $c_1 = (1,1,0,0,0,1)$ and $c_2=(1,0,0,0,1,0)$ respectively. Which of the following is true?\n",
+      "Question: Given the distribution of positive and negative samples for attributes A1 and A2, which is the best attribute for splitting?\n",
+      "\n",
+      "|A1|P|N|\n",
+      "|---|---|---|\n",
+      "|a|7|0|\n",
+      "|b|1|4|\n",
+      "\n",
+      "|A2|P|N|\n",
+      "|--|--|--|\n",
+      "|x|5|1|\n",
+      "|y|3|3|?\n",
       "Choose from the following options:\n",
       "Options:\n",
-      "A. The second row of $G$ is $(0,1,0,0,1,1)$.\n",
-      "B. $G$ is in systematic form.\n",
-      "C. $d_{\\min} = 3$.\n",
+      "A. A1\n",
+      "B. A2\n",
+      "C. They are the same\n",
+      "D. There is not enough information to answer the question\n",
       "    \n",
       "Please provide only one answer with the letter of the option.\n",
       "The chosen option is:\n",
-      "B.\n",
+      "a. A1\n",
       "\n",
-      "Let's first analyze the generator matrix $G$ of the code $(6,3)$:\n",
-      "\n",
-      "The generator matrix $G$ of the code $(6,3)$ is a 6-by-6 matrix\n",
-      "MCQA ANSWER -----------------> B\n"
+      "Explanation:\n",
+      "1. The distribution of positive samples for attribute A1 is given by the following expression:\n",
+      "|A1|P|\n",
+      "|---|---|\n",
+      "|a|7|\n",
+      "|0|6\n",
+      "MCQA ANSWER -----------------> A\n"
      ]
     }
    ],
    "source": [
     "index = random.randint(0, len(dataset['test']))\n",
     "instruction, question_body, options = prep_input(dataset['test'][index])\n",
-    "print(\"Instruction:\\n===================\\n\")\n",
+    "print(\"Instruction:\\n===================\")\n",
     "print(instruction)\n",
     "print(\"===================\")\n",
     "\n",
     "output_str_new_model = generate_answer(instruction, model, tokenizer, max_new_tokens=42)\n",
-    "print(\"Model generation (with input)\\n\")\n",
+    "print(\"Model generation (with input)\")\n",
     "print(output_str_new_model)\n",
     "print(\"MCQA ANSWER ----------------->\", parse_mcqa_output(output_str_new_model, instruction, options))"
    ]
